add mute command to bot
